--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,13 +1,21 @@
+.container {
+  position: relative;
+  padding-top: 60px;
+  background-color: #222222; /* Adjust the padding to match the navbar height */
+}
+ 
+
 .product-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr); /* Four columns */
   gap: 20px;
+  padding: 20px;
 }
 
 .product-card {
   position: relative;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 5%;
   overflow: hidden;
   cursor: pointer;
   transition: transform 0.3s ease; /* Add transition for smooth transformation */
@@ -66,8 +74,7 @@
 
 .expanded-content .image-container {
   width: 100%;
-  max-width: 200px; /* Fixed width for the image container */
-  aspect-ratio: 3 / 4; /* Aspect ratio 3:4 */
+  max-width: 300px; /* Fixed width for the image container */
 }
 
 .expanded-content img {
@@ -103,18 +110,14 @@
 
 .close-button {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 50px;
+  right: 50px;
   background-color: red;
   color: white;
   border: none;
   border-radius: 50%;
-  padding: 10px;
+  /* padding: 10px; */
   cursor: pointer;
-}
-
-.container {
-  position: relative;
 }
 
 .cart-container {
@@ -176,6 +179,7 @@
   height: 50px;
   object-fit: cover;
   margin-right: 10px;
+  border-radius: 15%;
 }
 
 .cart-item-details {
@@ -218,12 +222,32 @@
   cursor: pointer;
 }
 
-.header {
+.header-title-container {
   display: flex;
+  justify-content: center;
   align-items: center;
+  height: 20%; /* Adjust height as needed */
+  /* margin-top: %;  */
+  /* margin-bottom: 10%; */
+  background-image: radial-gradient(salmon, rgb(162, 49, 177));
+  background-size: cover;
 }
 
-.logo {
-  max-width: 50px;
-  margin-right: 10x;
+.header-title {
+  color: #FFB6A0; /* Pastel salmon color */
+  text-align: center;
+  font-size: 6rem;
 }
+
+.header-tab-row {
+  display: flex;
+}
+
+.header-tab {
+  color: #FFB6A0;
+  padding-left: 20px;
+
+}
+
+
+
