--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -23,6 +23,7 @@
   }
 }
 
+
 .product-card {
   position: relative;
   border: 1px solid #ccc;
@@ -172,13 +173,14 @@
     display: flex;
     align-items: center;
   }
+
 }
 
 .header-title-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 20%; /* Adjust height as needed */
+  height: 10%; /* Adjust height as needed */
   background-image: radial-gradient(salmon, rgb(162, 49, 177));
   background-size: cover;
 }
@@ -196,4 +198,8 @@
 .header-tab {
   color: #FFB6A0;
   padding-left: 20px;
+  background-color: #222222;
+  border-style: hidden;
 }
+
+
