--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -72,7 +72,7 @@
 }
 
 .expanded-content {
-  background-color: white;
+  background-color: #222222;
   padding: 20px;
   border-radius: 10px;
   max-width: 80%;
@@ -84,8 +84,8 @@
 
 .expanded-content .image-container {
   width: 100%;
-  max-width: 300px; /* Fixed width for the image container */
-  padding-top: 133.33%; /* Aspect ratio 3:4 */
+  max-width: 100%; /* Fixed width for the image container */
+  padding-top: 100%; /* Aspect ratio 3:4 */
   position: relative;
 }
 
@@ -101,12 +101,14 @@
 
 .expanded-content h2 {
   margin: 0;
+  color: #FFB6A0;
 }
 
 .expanded-content .description {
   overflow: hidden;
   max-height: 150px; /* Limit the height of the description */
   text-overflow: ellipsis;
+  color: #ccc;
 }
 
 .expanded-content .description.collapsed {
@@ -115,8 +117,11 @@
 
 .read-more-button {
   background: none;
-  border: none;
-  color: #007bff;
+  border-bottom: dotted;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  color: #ccc;
   cursor: pointer;
   font-size: 1rem;
   padding: 0;
@@ -126,7 +131,7 @@
 .add-to-cart-container {
   display: flex;
   align-items: center;
-  background-color: white;
+  background-color: #222222;
 }
 
 .add-to-cart-container .price {
@@ -134,6 +139,7 @@
   font-weight: bold;
   margin-right: 20px; /* Adjust spacing as needed */
   align-self: center;
+  color: #ccc;
 }
 
 .add-to-cart-container .add-to-cart {
