--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -236,13 +236,11 @@
   background: radial-gradient(circle, rgba(255,182,160,1) 0%, rgba(255,105,97,1) 100%);
 }
 
-.tab-title h2{
-  padding-top: 20px;
-  font-size: 25px;
-}
-
-.tab-title-container {
-  color: #FFB6A0;
-  text-align: center;
-  font-size: larger;
+.sort-dropdown, .filter-dropdown {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  color: #333;
+  cursor: pointer;
 }
