--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -18,6 +18,10 @@
   align-items: center;
 }
 
+.navbar-logo:hover {
+  cursor: pointer;
+}
+
 .navbar-logo-img {
   height: 40px;
   margin-right: 10px;
@@ -36,22 +40,57 @@
   position: relative;
 }
 
+.auth-button,
+.list-button,
+.logout-button {
+  margin-right: 10px;
+  color: #007bff;
+  text-decoration: none;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  padding: 0;
+}
+
+.auth-button:hover,
+.list-button:hover,
+.logout-button:hover {
+  color: #0056b3;
+}
+
+.profile-button {
+  margin-right: 10px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+
+.profile-photo {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
 .cart-icon {
-  height: 20px;
+  height: 24px;
 
 }
 
 .cart-button {
-  padding: 10px 15px;
-  background-color: #007bff;
-  color: white;
+  position: relative;
+  background: none;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
 }
 
 .cart-count {
+  position: absolute;
+  top: -10px;
+  right: -10px;
   background-color: red;
   box-shadow: #696969;
   color: white;
@@ -90,13 +129,9 @@
 
 .cart-item {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   padding: 10px 0;
-  border-bottom: 1px solid #777;
-}
-
-.cart-item:last-child {
-  border-bottom: none;
 }
 
 .cart-item-image {
