--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,5 +1,5 @@
 .profile-content {
-  background-color: #222222;
+  background-color: #333;
   padding: 20px;
   border-radius: 10px;
   max-width: 100%; /* Ensure it doesn't overflow the dropdown */
@@ -9,19 +9,24 @@
   gap: 20px;
 }
 
-.profile-photo {
-  width: 100px;
-  height: 100px;
+.profile-dropdown .profile-photo {
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   background-image: url('../profile.jpg');
   background-size: cover;
   background-position: center;
+  grid-column: 2 / 1;
+  grid-row: 3 / 1;
+  padding-left: 40px;
+  padding-top: 40px;
 }
 
 .profile-header {
   grid-column: 2 / 3;
-  grid-row: 1 / 2;
+  grid-row: 1 / 3;
   color: #FFB6A0;
+  font-weight: bold;
 }
 
 .profile-info {
@@ -40,7 +45,21 @@
   color: white;
   border: none;
   padding: 10px 15px;
-  border-radius: 5px;
+  border-radius: .75rem;
   cursor: pointer;
   margin-bottom: 10px;
+}
+
+.profile-dropdown {
+  position: absolute;
+  top: 45px;
+  right: 0;
+  background-color: #333;
+  /* border: 1px solid #696969; */
+  padding: 10px;
+  margin-top: 10px;
+  min-width: 23rem;
+  max-width: 430px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: .75rem;
 }
