--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -10,7 +10,7 @@
   box-sizing: border-box;
   top: 0;
   z-index: 1000;
-  box-shadow: #333 5px;
+  box-shadow: #222 0 1px 10px;
 }
 
 .navbar-logo {
@@ -26,12 +26,38 @@
   height: 40px;
   margin-right: 10px;
   border-radius: 5px;
+  box-shadow: #222 0 1px 5px;
 }
 
 .navbar-title {
   font-size: 1.5rem;
   color: #FFB6A0;
   font-weight: bolder;
+  
+}
+
+.search-container {
+  display: flex;
+  position: relative;
+  width: 65%;
+  
+}
+
+.search-input {
+  display: flex;
+  width: 100%;
+  /* max-width: 500px; */
+  padding: 10px;
+  /* margin-left: 100px; */
+  border-radius: 5px;
+  border: 5px solid #444;
+  border-radius: 3rem;
+  background-color: #333;
+}
+
+.search-input:hover {
+  background-color: #222;
+  transition: .3s;
 }
 
 .cart-container {
@@ -46,6 +72,7 @@
   border: none;
   border-radius: 50%;
   object-fit: cover;
+  height: 40px;
 }
 
 .navbar .profile-photo {
@@ -66,23 +93,23 @@
 }
 
 .cart-button {
+  height: 40px;
   position: relative;
   background: none;
   border: none;
   cursor: pointer;
-  font-size: 16px;
 }
 
 .cart-count {
   position: absolute;
-  top: -7px;
-  right: -5px;
+  top: -2px;
+  right: -2px;
   background-color: red;
   color: white;
-  border-radius: 3rem;
-  padding: 2.5px 5px;
+  border-radius: 50%;
+  padding: 2px 5px;
   font-size: 12px;
-  text-align: justify;
+  text-align: center;
 }
 
 .cart-dropdown {
@@ -90,7 +117,6 @@
   top: 45px;
   right: 0;
   background-color: #333;
-  /* border: 1px solid #696969; */
   padding: 10px;
   margin-top: 10px;
   min-width: 25rem;
@@ -131,7 +157,6 @@
   font-weight: bold;
   color: #FFB6A0;
   padding-left: 5px;
-  /* max-width: 99%; */
 }
 
 .cart-item-details span:last-child {
