--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -33,6 +33,7 @@
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   color: #ccc;
+  padding-left: 5px;
 }
 
 .profile-buttons {
@@ -41,13 +42,40 @@
 }
 
 .profile-buttons button {
-  background-color: #007bff;
+  background-color: red;
   color: white;
-  border: none;
+  border: 2px solid red;
   padding: 10px 15px;
   border-radius: .75rem;
   cursor: pointer;
   margin-bottom: 10px;
+  /* border-style: none; */
+}
+
+.profile-buttons button:hover {
+  background-color: white;
+  color: red;
+  border: 2px solid red;
+}
+
+.edit-button {
+  position: absolute;
+  grid-column: 4 / 4;
+  grid-row: 1 / 1;
+  height: 20px;
+  margin-left: -5px;
+}
+
+.edit-button button {
+  background: #333333ce;
+  border: none;
+  padding: 2.5px 5px;
+  border-radius: 3rem;
+  cursor: pointer;
+}
+
+.edit-button img {
+  height: 24px;
 }
 
 .profile-dropdown {
