--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -8,7 +8,7 @@
   display: grid;
   gap: 20px;
   padding: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /* Responsive grid */
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); /* Responsive grid */
 }
 
 @media (min-width: 600px) {
@@ -25,7 +25,7 @@
 
 .product-card {
   position: relative;
-  border: 1px solid #ccc;
+  border: 1px transparent;
   border-radius: 5%;
   overflow: hidden;
   cursor: pointer;
@@ -35,6 +35,7 @@
 .product-card:hover {
   transform: scale(110%);
   transition: 0.3s ease-out;
+  border: 5px solid white;
 
 }
 
@@ -121,13 +122,13 @@
 }
 
 .expanded-content h2 {
-  margin: 0;
+  margin: 10px 0 10px;
   color: #FFB6A0;
 }
 
 .expanded-content .description {
   overflow: hidden;
-  max-height: 150px; /* Limit the height of the description */
+  max-height: 50px; /* Limit the height of the description */
   text-overflow: ellipsis;
   color: #ccc;
 }
@@ -191,6 +192,7 @@
   .expanded-content .description {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+    padding-top: 20px;
   }
 
   .add-to-cart-container {
@@ -232,33 +234,33 @@
 
 .tab-bar {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   margin: 20px 0;
   padding: 0;
 }
 
-.tab {
+.tab-title 
+
+/* .tab {
   border-style: none;
   padding: 10px 20px;
-  text-align: center; /* Center text within each tab */
+  text-align: center; 
   cursor: pointer;
   color: #FFB6A0;
   background-color: salmon;
-  
   font-weight: bold;
   font-size: 1rem;
-  
   width: 30%;
   border-radius: .33rem;
 }
 
 
 .tab:hover {
-  transform: scale(1.1); /* Scale up the tab on hover */
-  background: radial-gradient(circle, rgba(255,182,160,1) 0%, rgba(255,105,97,1) 100%); /* Background gradient on hover */
+  transform: scale(1.1); 
+  background: radial-gradient(circle, rgba(255,182,160,1) 0%, rgba(255,105,97,1) 100%); 
   transition: 0.3s ease; 
   color:  white;
-}
+} */
 
 .sort-filter-container {
   display: flex;
@@ -312,5 +314,6 @@
   color: #ccc;
   text-align: center;
   font-size: larger;
+  margin-left: 20px;
 }
 
