--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -11,6 +11,7 @@
   top: 0;
   z-index: 1000;
   box-shadow: #222 0 1px 10px;
+  border-radius: .5rem;
 }
 
 .navbar-logo {
@@ -33,7 +34,7 @@
   font-size: 1.5rem;
   color: #FFB6A0;
   font-weight: bolder;
-  
+  text-wrap: nowrap;
 }
 
 .search-container {
@@ -49,7 +50,7 @@
   width: 100%;
   /* max-width: 500px; */
   padding: 10px;
-  /* margin-left: 100px; */
+  margin-left: 10px;
   border-radius: 5px;
   border: 5px solid #444;
   border-radius: 3rem;
