--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,14 +3,14 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #333;
+  background-color: #f5f0e1;
   color: #fff;
   position: fixed;
   width: 100%;
   box-sizing: border-box;
   top: 0;
   z-index: 1000;
-  box-shadow: #222 0 1px 10px;
+  box-shadow: #9992 0 1px 10px;
 }
 
 .navbar-logo {
@@ -31,8 +31,8 @@
 
 .navbar-title {
   font-size: 1.5rem;
-  color: #FFB6A0;
-  font-weight: bolder;
+  color: #2a3c4a;
+  font-weight:800
   
 }
 
@@ -50,14 +50,16 @@
   padding: 10px;
   /* margin-left: 100px; */
   border-radius: 5px;
-  border: 5px solid #444;
+  border: 5px solid #d1a15c;
   border-radius: 3rem;
-  background-color: #333;
+  background-color: #f5f0e1;
 }
 
 .search-input:hover {
-  background-color: #222;
+  background-color: #d1a15c;
   transition: .3s;
+  text-decoration: none;
+  color: #f5f0e1;
 }
 
 .cart-container {
