--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #f5f0e1;
+  background-color: #2a3c4a;
   color: #fff;
   position: fixed;
   width: 100%;
@@ -26,14 +26,20 @@
   height: 40px;
   margin-right: 10px;
   border-radius: 5px;
-  box-shadow: #222 0 1px 5px;
+  border-radius: 20px;
+  box-shadow: outset 8px 8px 25px #d1c4b9, 
+              outset -8px -8px 25px #ffffff;
 }
 
 .navbar-title {
   font-size: 1.5rem;
-  color: #2a3c4a;
+  color: #f5f0e1;
   font-weight:800
   
+}
+
+.navbar-title span {
+  color: #ff7f5e;
 }
 
 .search-container {
@@ -45,21 +51,34 @@
 
 .search-input {
   display: flex;
-  width: 100%;
+  width: 90%;
   /* max-width: 500px; */
   padding: 10px;
-  /* margin-left: 100px; */
+  margin-left: auto;
   border-radius: 5px;
   border: 5px solid #d1a15c;
   border-radius: 3rem;
   background-color: #f5f0e1;
+  box-shadow: inset 8px 8px 15px #d1c4b9,
+              inset -8px -8px 15px #f5f0e1;
+  padding: 15px;
+  font-size: 16px;
+  color: #2a3c4a;
+  outline: none;
 }
 
 .search-input:hover {
-  background-color: #d1a15c;
+  box-shadow: inset 5px 5px 10px #d1c4b9,
+  inset -5px -5px 10px #ffffff;
   transition: .3s;
   text-decoration: none;
-  color: #f5f0e1;
+  color: #2a3c4a;
+}
+
+.search-input:active {
+  box-shadow: inset 5px 5px 10px #d1c4b9,
+  inset -5px -5px 10px #ffffff;
+  border-color: #d1a15c;
 }
 
 .cart-container {
