--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,7 +1,7 @@
 .container {
   position: relative;
   padding-top: 60px;
-  background-color: #f5f0e1; /* Adjust the padding to match the navbar height */
+  background-color: #2a3c4a; /* Adjust the padding to match the navbar height */
 }
 
 .product-grid {
@@ -206,25 +206,32 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 20%; /* Adjust height as needed */
-  background: #f5f0e1;
+  height: 20vh; /* Set to viewport height for better scaling */
+  background: radial-gradient(circle, #2a3c4a 5%, #2a3c4a 100%);
   background-size: cover;
+  padding: 20px; 
 }
 
 .header-title {
-  color: #2a3c4a; /* Pastel salmon color */
+  color: #f5f0e1;
   text-align: center;
-  font-size: 6rem;
+  font-size: 5rem;
   font-weight: 800;
-  text-shadow: #9995 0 0 10px ;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3); /* Softer, subtle shadow */
+}
+
+.header-title span {
+  color: #ff7f5e; /* Accent color */
 }
 
 .header-subtitle {
-  font-size: 1.7em;
-  color: #a8b5a1;
-  margin-top: -30px;
-  padding-bottom: 20px;
+  font-size: 1.5rem;
+  color: #ff7f5e;
+  margin-top: -20px; /* Adjust spacing for balance */
+  padding-bottom: 10px; /* Adjust padding for consistency */
+  text-align: center; /* Center-align for consistency with title */
 }
+
 
 .header-tab {
   color: #FFB6A0;
@@ -234,32 +241,42 @@
 .tab-bar {
   display: flex;
   justify-content: space-around;
-  margin: 20px 0;
+  margin-top: 20px ;
   padding: 0;
 }
 
 .tab {
   border-style: none;
   padding: 10px 20px;
-  text-align: center; /* Center text within each tab */
+  text-align: center;
   cursor: pointer;
   color: #f5f0e1;
   background-color: #a8b5a1;
-  
   font-weight: bold;
   font-size: 1rem;
   
+  /* Neumorphic raised shadow */
+  box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.2), -8px -8px 15px rgba(255, 255, 255, 0.5);
+  
   width: 30%;
-  border-radius: .33rem;
+  border-radius: 0.33rem;
+  transition: transform 0.3s, box-shadow 0.3s;
 }
 
-
+/* Hover effect */
 .tab:hover {
-  transform: scale(1.1); /* Scale up the tab on hover */
-  background: radial-gradient(circle, #a8b5a1); /* Background gradient on hover */
-  transition: 0.3s ease; 
-  color:  #f5f0e1;
+  transform: scale(1.05);
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2), -10px -10px 20px rgba(255, 255, 255, 0.5);
+  background: radial-gradient(circle, #a8b5a1, #9aa692); /* Subtle background gradient */
+  color: #f5f0e1;
 }
+
+/* Active or pressed state */
+.tab:active {
+  box-shadow: inset 4px 4px 10px rgba(0, 0, 0, 0.2), inset -4px -4px 10px rgba(255, 255, 255, 0.5);
+  transform: scale(0.98);
+}
+
 
 .sort-filter-container {
   display: flex;
