--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -33,6 +33,10 @@
 }
 
 .product-card:hover {
+  border-radius: 1.33rem;
+background: linear-gradient(145deg, #263643, #2d404f);
+box-shadow:  20px 20px 60px #24333f,
+             -20px -20px 60px #304555;
   transform: scale(110%);
   transition: 0.3s ease-out;
 
@@ -209,7 +213,8 @@
   height: 20vh; /* Set to viewport height for better scaling */
   background: radial-gradient(circle, #2a3c4a 5%, #2a3c4a 100%);
   background-size: cover;
-  padding: 20px; 
+  padding: 20px;
+  margin: 60px 20px;
 }
 
 .header-title {
@@ -217,7 +222,8 @@
   text-align: center;
   font-size: 5rem;
   font-weight: 800;
-  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3); /* Softer, subtle shadow */
+  text-shadow:  6px 6px 12px #1d2a34,
+  -6px -6px 12px #374e60; /* Softer, subtle shadow */
 }
 
 .header-title span {
@@ -225,6 +231,7 @@
 }
 
 .header-subtitle {
+  z-index: 1000;
   font-size: 1.5rem;
   color: #ff7f5e;
   margin-top: -20px; /* Adjust spacing for balance */
@@ -235,14 +242,14 @@
 
 .header-tab {
   color: #FFB6A0;
-  padding-left: 20px;
+  padding: 20px;
 }
 
 .tab-bar {
   display: flex;
   justify-content: space-around;
-  margin-top: 20px ;
-  padding: 0;
+  margin: 20px;
+  padding: 30px;
 }
 
 .tab {
@@ -251,30 +258,40 @@
   text-align: center;
   cursor: pointer;
   color: #f5f0e1;
-  background-color: #a8b5a1;
   font-weight: bold;
   font-size: 1rem;
   
   /* Neumorphic raised shadow */
-  box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.2), -8px -8px 15px rgba(255, 255, 255, 0.5);
+  background: linear-gradient(145deg, #263643, #2d404f);
+  box-shadow:  6px 6px 12px #1d2a34,
+               -6px -6px 12px #374e60;
   
-  width: 30%;
-  border-radius: 0.33rem;
-  transition: transform 0.3s, box-shadow 0.3s;
+  
+  width: 20%;
+  border-radius: 1.3rem;
+  transition: transform 0.3s, box-shadow 0.3s, transition 0.3s;
 }
 
 /* Hover effect */
 .tab:hover {
-  transform: scale(1.05);
-  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2), -10px -10px 20px rgba(255, 255, 255, 0.5);
-  background: radial-gradient(circle, #a8b5a1, #9aa692); /* Subtle background gradient */
+  transform: scale(1.03);
+  border-radius: 39px;
+  background: #2a3c4a;
+  box-shadow:  6px 6px 12px #1d2a34,
+               -6px -6px 12px #374e60;
+  
+  transition: 0.3s;
   color: #f5f0e1;
 }
 
 /* Active or pressed state */
 .tab:active {
-  box-shadow: inset 4px 4px 10px rgba(0, 0, 0, 0.2), inset -4px -4px 10px rgba(255, 255, 255, 0.5);
-  transform: scale(0.98);
+  border-radius: 39px;
+  background: #2a3c4a;
+  box-shadow: inset 6px 6px 12px #23323e,
+              inset -6px -6px 12px #314656;
+  
+  transform: scale(0.99);
 }
 
 
