--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -224,6 +224,8 @@ box-shadow:  20px 20px 60px #24333f,
   font-weight: 800;
   text-shadow:  6px 6px 12px #1d2a34,
   -6px -6px 12px #374e60; /* Softer, subtle shadow */
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .header-title span {
@@ -251,6 +253,7 @@ box-shadow:  20px 20px 60px #24333f,
   margin: 20px;
   padding: 30px;
 }
+
 
 .tab {
   border-style: none;
@@ -300,13 +303,58 @@ box-shadow:  20px 20px 60px #24333f,
   justify-content: flex-end;
   gap: 20px;
   margin: 20px;
+  padding: 10px 20px;
+  text-align: center;
+  cursor: pointer;
+  color: #f5f0e1;
+  background: #2a3c4a;
+  font-weight: bold;
+  font-size: 1rem;
+  
+  /* Neumorphic raised shadow */
+  box-shadow:  6px 6px 12px #1d2a34,
+               -6px -6px 12px #374e60;
+  
+  border-radius: 1.3rem;
+  transition: transform 0.3s, box-shadow 0.3s, transition 0.3s;
 }
 
-.search-sort-filter-container {
+.dropdown {
   display: flex;
-  justify-content: flex-end;
-  gap: 20px;
-  margin: 20px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dropdown-label {
+  font-weight: bold;
+  color: #555;
+  margin-bottom: 8px;
+}
+
+.neumorphic-dropdown {
+  appearance: none; /* Remove default arrow */
+  padding: 12px 20px;
+  font-size: 1rem;
+  border-radius: 1.3rem;
+  border: none;
+  background: #e0e0e0;
+  box-shadow:  6px 6px 12px #1d2a34,
+               -6px -6px 12px #374e60;
+  color: #333;
+  outline: none;
+  cursor: pointer;
+  transition: transform 0.3s, box-shadow 0.3s, transition 0.3s;
+  
+}
+
+
+
+.neumorphic-dropdown:hover {
+  box-shadow: 4px 4px 10px #b8b9be, -4px -4px 10px #ffffff;
+}
+
+.neumorphic-dropdown:focus {
+  box-shadow: inset 4px 4px 8px #b8b9be, inset -4px -4px 8px #ffffff;
 }
 
 .search-input {
@@ -318,23 +366,32 @@ box-shadow:  20px 20px 60px #24333f,
   width: 200px;
 }
 
-.sort-dropdown,
-.filter-dropdown {
+.sort-button,
+.filter-button {
   /* text-align: center; */
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   /* width: auto; */
-  background-image: none;
-  background-color: #fff;
-  padding: 10px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  color: #333;
+  border-style: none;
+  padding: 10px 20px;
+  text-align: center;
   cursor: pointer;
-  background-repeat: no-repeat;
-  background-position: right center; /* Ensure no background image is displayed */
+  color: #f5f0e1;
+  background: #2a3c4a;
+  font-weight: bold;
+  font-size: 1rem;
+  
+  /* Neumorphic raised shadow */
+  box-shadow:  6px 6px 12px #1d2a34,
+               -6px -6px 12px #374e60;
+  
+  
+  width: 20%;
+  border-radius: 1.3rem;
+  transition: transform 0.3s, box-shadow 0.3s, transition 0.3s; /* Ensure no background image is displayed */
 }
+
 
 
 .tab-title h2{
